Odstranění některých mezer na koncích řádků
Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/_posts/2018-10-08-dekujeme.md
+++ b/_posts/2018-10-08-dekujeme.md
@@ -1,9 +1,9 @@
 ---
 date: 2018-10-08
 category: blog
-tags: volby klub 
+tags: [volby, klub]
 layout: post
-title: Děkujeme Vám za podporu! 
+title: Děkujeme Vám za podporu!
 author: Jan Hamal
 authorId: jan.hamal.dvorak
 image: posts/zastupitelsky-klub.jpg
