WIP: Map for posts II

--- a/_posts/2018-08-12-psi-louka.md
+++ b/_posts/2018-08-12-psi-louka.md
@@ -2,7 +2,7 @@
 title: Proč radnice dává přednost pejskařům před seniory?
 authorId: karel.ptacek
 image: posts/psi-louka.jpg
-tags: [Životní prostředí, Karlín]
+tags: [Karlín, Životní prostředí]
 ---
 
 
