--- a/_posts/2022-08-23-30-dni-do-voleb.md
+++ b/_posts/2022-08-23-30-dni-do-voleb.md
@@ -1,6 +1,6 @@
 ---
 title: "Do voleb zbývá 30 dní. Máme odvahu řídit Prahu 8 správně!"
-author: Martin Štěrba
+author: Piráti Praha 8
 image: posts/volby2022-30dni.png
 tags: [Volby 2022]
 ---
