--- a/_posts/2023-08-02-senat.md
+++ b/_posts/2023-08-02-senat.md
@@ -2,7 +2,7 @@
 title: "Lukáš Wagenknecht otevřel v Senátu otázku vymáhání přetížení kamionů a vyzval vládu, ať vymyslí definici on-line médií"
 author: Piráti Praha 8
 image:  posts/wagenknecht-sipova.jpg
-tags:   [Doprava, Senát, Transparentnost)]
+tags:   [Doprava, Senát, Transparentnost]
 ---
 
 Náš pirátský senátor Lukáš Wagenknecht dnes v Senátu mluvil o tom, že v České republice nejsou desítky let dostatečně legislativně upraveny a vymáhány přetížení jízdních souprav kamionové dopravy. Dopadem je pak neutěšený stav pozemních komunikací, a to nejen tady u nás na osmičce. Tím tak dochází k nehospodárnému a neefektivnímu vynakládání veřejných prostředků v řádů miliard korun na jejich opravu.
